--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "llm-benchmark",
   "version": "1.0.0",
   "description": "Everywhere-Ready LLM Code Optimizer & Self-Validating Benchmark Suite",
-  "private": false,
+  "private": true,
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
